Daily_Report/build_2026-04-20_run213-1_main.log
  File "/home/runner/work/Stock_Bot_2/Stock_Bot_2/Main.py", line 133
    print(f"匯率或
          ^
SyntaxError: unterminated string literal (detected at line 133)
